<resources>
    <string name="app_name">NewsApp-MVVM-Architecture</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="news_sources">News Sources</string>
    <string name="country_selection">Country Selection</string>
    <string name="language_selection">Language Selection</string>
    <string name="search">Search</string>
    <string name="category_text">Category</string>
    <string name="no_data">No data to display</string>
    <string name="no_data_go_back">Navigate back</string>
</resources>