<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnTopHeadlines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_headlines"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnNewsSources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_sources"
        android:layout_below="@id/btnTopHeadlines"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnCountrySelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_selection"
        android:layout_below="@id/btnNewsSources"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnLanguageSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_selection"
        android:layout_below="@id/btnCountrySelection"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_below="@id/btnLanguageSelection"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
